--- a/src/app/components/clientes/list-clientes/list-clientes.component.html
+++ b/src/app/components/clientes/list-clientes/list-clientes.component.html
@@ -2,34 +2,44 @@
   <div class="card">
     <div class="card-body">
       <span class="hr">Lista de Clientes</span>
-      <button class="btn btn-primary btn-lg float-right" routerLink="/create-clientes">Agregar</button>
-      <h5 class="text-primary mt-3" *ngIf="clientes.length == 0">No hay datos para mostrar</h5>
-      <table *ngIf="clientes.length >0"class="table table-striped mt-5">
+      <button
+        class="btn btn-primary btn-lg float-right"
+        routerLink="/create-clientes"
+      >
+        Agregar
+      </button>
+      <h5 class="text-primary mt-3" *ngIf="clientes.length == 0">
+        No hay datos para mostrar
+      </h5>
+      <table *ngIf="clientes.length > 0" class="table table-striped mt-5">
         <thead>
-       <tr>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Documento</th>
-        <th>Salario</th>
-        <th>Accion</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor = "let cliente of clientes">
-        <td>{{cliente.nombre}}</td>
-        <td>{{cliente.apellidos}}</td>
-        <td>{{cliente.documento}}</td>
-        <td>{{cliente.salario | currency}}</td>
-        <td>
-          <i class="fas fa-edit fa-lg text-info mr-2" [routerLink]="['/edit-cliente/',cliente.id]"></i>
-          <i (click)="eliminarCliente(cliente.id)" class="fas fa-trash-alt fa-lg text-danger"></i></td>
-      </tr>
-    </tbody>
+          <tr>
+            <th>Nombre</th>
+            <th>Apellidos</th>
+            <th>Documento</th>
+            <th>Salario</th>
+            <th>Accion</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let cliente of clientes">
+            <td>{{ cliente.nombre }}</td>
+            <td>{{ cliente.apellidos }}</td>
+            <td>{{ cliente.documento }}</td>
+            <td>{{ cliente.salario | currency }}</td>
+            <td>
+              <i
+                class="fas fa-edit fa-lg text-info mr-2"
+                [routerLink]="['/edit-cliente/', cliente.id]"
+              ></i>
+              <i
+                (click)="eliminarCliente(cliente.id)"
+                class="fas fa-trash-alt fa-lg text-danger"
+              ></i>
+            </td>
+          </tr>
+        </tbody>
       </table>
-  
     </div>
-    <div *ngFor="let project of clientprojects">
-      {{project.name}}
-   </div>
   </div>
 </div>
