--- a/src/app/components/materiales/create-materiales/create-materiales.component.html
+++ b/src/app/components/materiales/create-materiales/create-materiales.component.html
@@ -35,7 +35,7 @@
               </div>
               <div class="col">
                 <input
-                  type="text"
+                  type="number"
                   class="form-control form-control-lg"
                   formControlName="precio"
                   placeholder="Precio"
