--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,16 @@
 <nav class="navbar navbar-dark bg-primary">
   <span class="navbar-brand mb-0 h1">App Proyectos</span>
+  <div class="dropdown">
+    <button
+      type="button"
+      class="btn btn-primary dropdown-toggle"
+      data-toggle="dropdown"
+    >
+      Admin
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" routerLink="/list-materiales">Materiales</a>
+      <a class="dropdown-item" routerLink="/list-clientes">Clientes</a>
+    </div>
+  </div>
 </nav>
