--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
     <div class="dropdown-menu">
       <a class="dropdown-item" routerLink="/list-materiales">Materiales</a>
       <a class="dropdown-item" routerLink="/list-clientes">Clientes</a>
+      <a class="dropdown-item" routerLink="/list-proyectos">Proyectos</a>
     </div>
   </div>
 </nav>
