--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-dark bg-primary">
-  <span class="navbar-brand mb-0 h1">App Proyectos</span>
+  <a routerLink="/list-clientes">
+  <span class="navbar-brand mb-0 h1">App Proyectos</span></a>
   <div class="dropdown">
     <button
       type="button"
@@ -10,7 +11,7 @@
     </button>
     <div class="dropdown-menu">
       <a class="dropdown-item" routerLink="/list-materiales">Materiales</a>
-      <a class="dropdown-item" routerLink="/list-clientes">Clientes</a>
+      
   
     </div>
   </div>
