--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
     </button>
     <div class="dropdown-menu">
       <a class="dropdown-item" routerLink="/list-materiales">Materiales</a>
+      <a class="dropdown-item" routerLink="/list-trabajadores">Trabajadores</a>
       
   
     </div>
