--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-primary">
-  <a routerLink="/list-clientes">
+  <a class="route_link" routerLink="/" >
   <span class="navbar-brand mb-0 h1">App Proyectos</span></a>
   <div class="dropdown">
     <button
@@ -11,8 +11,7 @@
     </button>
     <div class="dropdown-menu">
       <a class="dropdown-item" routerLink="/list-materiales">Materiales</a>
-      <a class="dropdown-item" routerLink="/list-trabajadores">Trabajadores</a>
-      
+      <a class="dropdown-item" routerLink="/list-trabajadores">Trabajadores</a>     
   
     </div>
   </div>
