--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-dark bg-primary">
   <a class="route_link" routerLink="/" >
   <span class="navbar-brand mb-0 h1">App Proyectos</span></a>
+  <div class="text-center">
+    <a class="btn btn-info" routerLink="/create-proyectos" role="button">Crear un Proyecto</a> 
+
+  </div>
   <div class="dropdown">
     <button
       type="button"
